[package]
name = "memexd"
version = "0.1.0"
edition = "2021"
description = "Memory eXchange Daemon - Document processing and embedding generation service"
authors = ["Christian C. Berclaz <christian.berclaz@mac.com>"]
license = "MIT"

[[bin]]
name = "memexd"
path = "src/main.rs"

[dependencies]
# Internal dependencies
workspace-qdrant-core = { path = "../core", default-features = false }
workspace-qdrant-grpc = { path = "../grpc" }

# CLI and argument parsing
clap = { version = "4.5", features = ["derive", "string"] }

# Async runtime
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "signal", "fs"] }

# Database (SqlitePool used in phase-module signatures)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Logging
tracing = { version = "0.1", features = ["log", "attributes", "std"] }

# Utilities
scopeguard = "1.2"
tokio-util = "0.7"

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winnt", "handleapi", "minwinbase", "processenv", "winbase"] }
windows-service = "0.7"

[features]
default = []
# Enable OCR support (requires Tesseract system library)
ocr = ["workspace-qdrant-core/ocr"]
# Compile OpenSSL from source (for cross-compilation where system OpenSSL is unavailable)
openssl-vendored = ["dep:openssl-sys"]

[dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]
optional = true

[lints]
workspace = true
