[package]
name = "memexd"
version = "0.1.3"
edition = "2021"
description = "Memory eXchange Daemon - Document processing and embedding generation service"
authors = ["Christian C. Berclaz <christian.berclaz@mac.com>"]
license = "Apache-2.0"

[lib]
name = "memexd"
path = "src/lib.rs"

[[bin]]
name = "memexd"
path = "src/main.rs"

[dependencies]
# Internal dependencies
workspace-qdrant-core = { path = "../core", default-features = false }
workspace-qdrant-grpc = { path = "../grpc" }
wqm-common = { path = "../../common" }

# CLI and argument parsing
clap = { version = "4.5", features = ["derive", "string"] }

# Async runtime
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "signal", "fs"] }

# Database (SqlitePool used in phase-module signatures)
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }

# Logging
tracing = { version = "0.1", features = ["log", "attributes", "std"] }

# Utilities
scopeguard = "1.2"
tokio-util = "0.7"

# Control-port identity stamp + diagnostics (spec 16 §10.1).
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
# Mach kernel bindings for current-process RSS (task_info); libc deprecated
# its mach_task_self/task_info surface in favor of this crate.
mach2 = "0.6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winnt", "handleapi", "minwinbase", "processenv", "winbase"] }
windows-service = "0.7"

[dev-dependencies]
tempfile = { workspace = true }
serde_yaml_ng = { workspace = true }
# Serialize tests that mutate process-global env vars (control_port).
serial_test = { workspace = true }

# A0.7: ladybug is the default graph backend for the daemon. Build with
# `--no-default-features --features sqlite` for a light, C++-toolchain-free build
# (the per-PR CI lane uses this so it never pays the ~86-min Kuzu build cost).
[features]
default = ["ladybug"]
# Enable OCR support (requires Tesseract system library)
ocr = ["workspace-qdrant-core/ocr"]
# Enable the LadybugDB (Kuzu) graph backend (requires a C++ toolchain)
ladybug = ["workspace-qdrant-core/ladybug"]
# Select the SQLite backend explicitly (marker; SQLite is always compiled).
# Pair with --no-default-features to opt out of the Kuzu C++ build.
sqlite = ["workspace-qdrant-core/sqlite"]

[lints]
workspace = true
