[package]
name = "shared-test-utils"
version = "0.1.0-beta1"
edition = "2021"
authors = ["Christian C. Berclaz <christian.berclaz@mac.com>"]
description = "Shared test utilities for workspace-qdrant-mcp Rust workspace"
license = "MIT"
publish = false

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-test = { workspace = true }

# Serialization and utilities
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Testing infrastructure
proptest = { workspace = true }
tempfile = { workspace = true }
serial_test = { workspace = true }
test-log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
tracing-test = { workspace = true }
once_cell = { workspace = true }

# Container testing
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }

# Standard library
regex = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }

# Platform-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"